# microgpt-cpp

./: .gitignore  CMakeLists.txt  COMPARISON_WITH_PYTHON.md  FINAL_STATUS.txt  HEAP_ALLOCATION_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  PROJECT_SUMMARY.md  README.md  SMART_POINTER_ANALYSIS.md  SOLUTION_SUMMARY.md  TODO.md  cpp_fixed_output.txt  final_demo.sh  gdb_commands.txt  microgpt.py  python_output.txt  python_reference_output.txt  test_backward_detailed.cpp  test_backward_trace.cpp  test_factory_methods.cpp  test_gradients  test_gradients.cpp  test_log.cpp  test_pointer_api.cpp  test_simple  test_simple.cpp  test_softmax.cpp  test_softmax_debug.cpp  test_softmax_isolated.cpp  test_topo  test_topo.cpp  test_train_small.cpp  test_training_simple  test_training_simple.cpp  test_with_signals.cpp  train_debug
docs/: microgpt-cpp.7
examples/: infer.cpp  infer_simple.cpp  train.cpp  train_debug.cpp  train_simple.cpp
include/microgpt/: layers.h  microgpt.h  model.h  optimizer.h  utils.h  value.h
